--- a/software/src/web/css/main.css
+++ b/software/src/web/css/main.css
@@ -102,6 +102,38 @@ div.description
 	padding-bottom: 30px;
 }
 
+div.loginentry
+{
+	margin: auto;
+	font-size: 20px;
+	/*text-align: left;*/
+	padding: 20px 20px;
+}
+
+div.logout
+{
+	text-align: right;
+}
+
+input
+{
+    padding-left: 20px;
+	border: 5px solid white; 
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 15px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
+	width: 300;
+}
+
 p
 {
 	padding: 8px 8px;
